# Metadea

./: .gitignore  README.md
.agents/: AGENTS.md
.claude/: launch.json
.github/workflows/: ci.yml  cleanup-branches.yml  release.yml  update-database.yml
.tours/: refactorer-god-file-split.tour
backend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  wrangler.jsonc
backend/src/: index.ts  types.ts
catalog/Anime/: anime-3015.json  anime-3016.json  anime-3371.json  anime-3665.json
catalog/Characters/: character-36045.json
catalog/Games/: game-11197.json  game-132638.json  game-132639.json  game-132645.json  game-132655.json  game-132656.json  game-132689.json  game-134112.json  game-13557.json  game-13558.json  game-136673.json  game-136889.json  game-141833.json  game-146075.json  game-16665.json  game-185864.json  game-192133.json  game-19564.json  game-1985.json  (+40 more)
database/: anime-136192.json  anime-3014.json  anime-3016.json  anime-3371.json  anime-3665.json  anime-820.json  game-1009.json  game-11169.json  game-112.json  game-11658.json  game-125174.json  game-134.json  game-134112.json  game-1346.json  game-136.json  game-136889.json  game-1441.json  game-146075.json  game-146081.json  game-1515.json  game-1557.json  game-18100.json  game-185246.json  game-191931.json  game-19560.json  game-19564.json  game-2135.json  game-2136.json  game-215089.json  game-220932.json  game-222295.json  game-222341.json  game-22686.json  game-22688.json  game-228528.json  game-228530.json  game-23220.json  game-24470.json  game-250635.json  game-26192.json  (+57 more)
docs/: 30_DAY_ROADMAP.md  CLAUDE.md  CLAUDE2.md  DEVELOPMENT_RULES.md  LESSONS_FROM_METAMEDIA.md  PRECOMMIT_CHECKLIST.md  README.md  SKILLS_ROADMAP.md  colaboracion_catalogo_git.md
frontend/: .gitignore  .tauri-keys  .tauri-keys.pub  astro.config.mjs  knip.json  package-lock.json  package.json  pnpm-lock.yaml
frontend/src-tauri/: 2  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/permissions/: default.toml
frontend/src-tauri/src/: actors.rs  anilist.rs  auth.rs  characters.rs  comicvine.rs  commands.rs  community_sync.rs  companies.rs  db.rs  discord.rs  episode_history.rs  favorite_images.rs  folders.rs  github.rs  igdb.rs  igdb_env.rs  igdb_matching.rs  lib.rs  main.rs  media_authors.rs  media_catalog.rs  media_relations.rs  platform_scanning.rs  proposal_bundle.rs  sagas.rs  staff.rs  steam.rs  sync_state.rs  tier_lists.rs  user_library.rs  user_lists.rs  user_metadata.rs  utils.rs  vestigial_cleanup.rs
scripts/: build-database.js
(+329 files in other folders)
