[package]
name = "metadea"
version = "0.1.0"
description = "Personal media library manager"
authors = ["Nacho"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
rfd       = "0.14"
reqwest   = { version = "0.12", features = ["json"] }
tokio     = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
